[package]
name = "actix-web-demo"
version = "0.1.0"
authors = ["sewerganger <wanghan9423@outlook.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "0.2.4"
actix-web = "1.0.5"
actix-files = "0.1.4"
actix-session = "0.2.0"

futures = "0.1.28"
env_logger = "0.6.2"
bytes = "0.4"